--- a/Templates/Main.html
+++ b/Templates/Main.html
@@ -30,7 +30,7 @@
                 <li><a href="#">Du lịch Trung Quốc</a></li>
                 <li><a href="#">Du lịch Singaphore</a></li>
                 <li><a href="#"> Du lịch Hàn Quốc</a></li>
-                <li><a href="#"> Du lịch Nhật Bản Tokyo</a></li>
+                <li><a href="#"> Du lịch Nhật Bản </a></li>
                 <li><a href="#">Du lịch Hoa kỳ</a></li>
                 <li><a href="#"> Du lịch Châu Âu</a></li>
               </ul>
